--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,16 @@ aiosignal==1.3.1
 asgiref==3.6.0
 async-timeout==4.0.2
 attrs==22.2.0
+autopep8==2.0.1
+certifi==2022.12.7
 charset-normalizer==2.1.1
 Django==4.1.6
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
+pycodestyle==2.10.0
+requests==2.28.2
 sqlparse==0.4.3
+tomli==2.0.1
+urllib3==1.26.14
 yarl==1.8.2
