--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
 pycodestyle==2.10.0
+python-dotenv==0.21.1
 requests==2.28.2
 sqlparse==0.4.3
 tomli==2.0.1
